2000-04-18 12:28:24  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* nnwarchive.el (nnwarchive-type-definition): New egroups html.
	(nnwarchive-egroups-*): Ditto.
	(nnwarchive-url): Unibyte buffer and single line cookie.

2000-04-14 18:50:04  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* mm-util.el (mm-char-or-char-int-p): New alias.
	* nnweb.el (nnweb-decode-entities): Check the validity of numeric 
	entities.

2000-04-10   Daiki Ueno  <ueno@unixuser.org>

        * lisp/imap.el (imap-body-lines): Check Content-Type: of the
        article case insensitively.

2000-04-10 20:35:46  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* mail-source.el (mail-source-fetch-webmail): Use the default
	password provided in mail-sources; use webmail:subtype:user as
	the key.
	
2000-04-10 20:35:46  John Wiegley <johnw@gnu.org>

	* mail-source.el (mail-source-fetch-webmail): Use
	mail-source-password-cache.

2000-04-09 18:13:47  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* webmail.el: Add netscape mail and fix HotMail mail.

2000-04-08  Simon Josefsson  <jas@pdc.kth.se>

	* imap.el (imap-kerberos4-open): Work with recent `imtest's.

2000-04-02  Simon Josefsson  <jas@pdc.kth.se>

	* nnimap.el (nnimap-request-article): Use BODY.PEEK[] instead of
	RFC822.PEEK if server support IMAP4rev1.
	(nnimap-request-body): Use BODY.PEEK[TEXT] instead of
	RFC822.TEXT.PEEK if server support IMAP4rev1.
	(nnimap-request-head): Use BODY.PEEK[HEADER] instead of
	RFC822.HEADER if server support IMAP4rev1.
	(nnimap-request-article-part): Support bodydetail in response
	data.

2000-03-11  Simon Josefsson  <jas@pdc.kth.se>

	* fill-flowed.el: New file.

	* mm-decode.el (mm-dissect-singlepart): Create a MIME handle for
	text/plain parts with `format' parameters.

	* mm-view.el (autoload): Autoload fill-flowed.
	(mm-inline-text): For "plain" parts with a format=flowed
	parameter, call `fill-flowed'.

2000-03-21 10:32:44  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnslashdot.el (nnslashdot-request-list): Fudge new-style